[package]
name = "bevy-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.1", features = ["dynamic_linking"] }
chrono = "0.4.26"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
